--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using ControlGastos
-@using ControlGastos.Models
+﻿@using PersonalExpenses
+@using PersonalExpenses.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
