--- a/Views/Expenses/Index.cshtml
+++ b/Views/Expenses/Index.cshtml
@@ -12,8 +12,11 @@
     <thead>
         <tr>
             <th>Amount</th>
+            <th>Price</th>
             <th>Date</th>
             <th>Category</th>
+            <th>Actions</th>
+
         </tr>
     </thead>
     <tbody>
@@ -25,11 +28,48 @@
                 <td>@item.Date.ToShortDateString()</td>
                 <td>@item.Category?.Name</td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Details" class="btn btn-secondary btn-sm" asp-route-id="@item.Id">Details</a>
+                    <a asp-action="Edit" class="btn btn-warning btn-sm" asp-route-id="@item.Id">Edit</a>
+                    <a href="#" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal"
+                        data-expense-id="@item.Id">
+                        Eliminar
+                    </a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+
+<!-- Modal de confirmación -->
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form id="deleteForm" asp-action="Delete" method="post">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteModalLabel">Confirmar eliminación</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                </div>
+                <div class="modal-body">
+                    ¿Estás seguro que querés eliminar este gasto?
+                </div>
+                <input type="hidden" name="id" id="expenseId" />
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="submit" class="btn btn-danger">Eliminar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    <script>
+        const deleteModal = document.getElementById("deleteModal")
+        deleteModal.addEventListener('show.bs.modal', (e) => {
+            const button = e.relatedTarget;
+            const expenseId = button.getAttribute('data-expense-id');
+            const input = document.getElementById('expenseId')
+            input.value = expenseId
+        })
+    </script>
+}
