--- a/Views/Expenses/Index.cshtml
+++ b/Views/Expenses/Index.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "Expenses";
+    var model = Model;
+
 }
 
 <h1>Expenses</h1>
@@ -11,8 +13,8 @@
 <table class="table table-bordered">
     <thead>
         <tr>
-            <th>Amount</th>
-            <th>Price</th>
+            <th>Id</th>
+            <th>Price (ARS) </th>
             <th>Date</th>
             <th>Category</th>
             <th>Actions</th>
@@ -24,7 +26,7 @@
         {
             <tr>
                 <td>@item.Id</td>
-                <td>@item.Amount.ToString("C")</td>
+                <td>@item.Amount.ToString("F2")</td>
                 <td>@item.Date.ToShortDateString()</td>
                 <td>@item.Category?.Name</td>
                 <td>
